[gd_scene load_steps=12 format=3 uid="uid://dmu0q0b0jwa"]

[ext_resource type="Script" path="res://ws_new.gd" id="1_scix4"]
[ext_resource type="StyleBox" uid="uid://d36m1th6a44ss" path="res://button.tres" id="2_7yoce"]
[ext_resource type="Theme" uid="uid://khcxakqnogv3" path="res://textlabeltheme.tres" id="2_uwe2s"]
[ext_resource type="StyleBox" uid="uid://bbuh8oxmxqsqr" path="res://new_style_box_flat.tres" id="3_l8i8u"]

[sub_resource type="Theme" id="Theme_rdguh"]

[sub_resource type="Theme" id="Theme_0k7v3"]
LineEdit/styles/normal = ExtResource("3_l8i8u")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vlhf1"]
bg_color = Color(0.666667, 0.666667, 0.666667, 1)
border_width_left = 2
border_width_top = 4
corner_radius_top_left = 18
corner_radius_top_right = 11
corner_radius_bottom_right = 21
corner_radius_bottom_left = 8
shadow_color = Color(1, 0.733333, 0.972549, 0.6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ter70"]
corner_radius_top_left = 18
corner_radius_top_right = 11
corner_radius_bottom_right = 21
corner_radius_bottom_left = 8
shadow_color = Color(1, 0.733333, 0.972549, 0.6)

[sub_resource type="Theme" id="Theme_bytfd"]
Button/styles/hover = SubResource("StyleBoxFlat_vlhf1")
Button/styles/normal = ExtResource("2_7yoce")
Button/styles/pressed = SubResource("StyleBoxFlat_ter70")

[sub_resource type="Theme" id="Theme_h14tp"]
LineEdit/styles/normal = ExtResource("3_l8i8u")

[sub_resource type="Theme" id="Theme_svhul"]
Button/styles/normal = ExtResource("2_7yoce")

[node name="Node" type="Node"]
script = ExtResource("1_scix4")
metadata/_edit_horizontal_guides_ = [530.0, 561.0, 604.0]

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = -1
anchor_right = 17.969
anchor_bottom = 9.969
offset_right = -0.015625
offset_bottom = 0.0151367
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchor_right = 0.339
anchor_bottom = 1.0
offset_right = 0.471985
grow_horizontal = 2
grow_vertical = 2

[node name="Hbox-Titles" type="HBoxContainer" parent="Control"]
custom_minimum_size = Vector2(200, 0)
layout_direction = 2
layout_mode = 2
offset_left = 60.0
offset_top = 12.0
offset_right = 328.0
offset_bottom = 37.0
alignment = 2

[node name="Name" type="Label" parent="Control/Hbox-Titles"]
clip_contents = true
custom_minimum_size = Vector2(115.86, 25)
layout_mode = 2
theme = ExtResource("2_uwe2s")
text = "Pilot
"
horizontal_alignment = 1
text_overrun_behavior = 1

[node name="VSeparator" type="VSeparator" parent="Control/Hbox-Titles"]
layout_mode = 2

[node name="Sector _ Lap" type="Label" parent="Control/Hbox-Titles"]
clip_contents = true
custom_minimum_size = Vector2(25.005, 25)
layout_mode = 2
theme = ExtResource("2_uwe2s")
text = "L
"
horizontal_alignment = 1
text_overrun_behavior = 1

[node name="VSeparator2" type="VSeparator" parent="Control/Hbox-Titles"]
layout_mode = 2

[node name="Gate" type="Label" parent="Control/Hbox-Titles"]
clip_contents = true
custom_minimum_size = Vector2(30, 25)
layout_mode = 2
theme = ExtResource("2_uwe2s")
text = "G
"
horizontal_alignment = 1
clip_text = true
text_overrun_behavior = 1

[node name="VSeparator3" type="VSeparator" parent="Control/Hbox-Titles"]
layout_mode = 2

[node name="Delta" type="Label" parent="Control/Hbox-Titles"]
clip_contents = true
custom_minimum_size = Vector2(60.015, 25)
layout_mode = 2
theme = ExtResource("2_uwe2s")
text = "Delta"
clip_text = true
text_overrun_behavior = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 62.0
offset_top = 50.0
offset_right = 328.0
offset_bottom = 371.0

[node name="Hbox-p1" type="HBoxContainer" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_direction = 2
layout_mode = 2
alignment = 2

[node name="Name" type="Label" parent="Control/VBoxContainer/Hbox-p1"]
clip_contents = true
custom_minimum_size = Vector2(115.86, 25)
layout_mode = 2
theme = ExtResource("2_uwe2s")
text = "---"
horizontal_alignment = 1
text_overrun_behavior = 1

[node name="VSeparator" type="VSeparator" parent="Control/VBoxContainer/Hbox-p1"]
layout_mode = 2

[node name="Sector _ Lap" type="Label" parent="Control/VBoxContainer/Hbox-p1"]
clip_contents = true
custom_minimum_size = Vector2(25.005, 25)
layout_mode = 2
theme = ExtResource("2_uwe2s")
text = "---
"
horizontal_alignment = 1
text_overrun_behavior = 1

[node name="VSeparator2" type="VSeparator" parent="Control/VBoxContainer/Hbox-p1"]
layout_mode = 2

[node name="Gate" type="Label" parent="Control/VBoxContainer/Hbox-p1"]
clip_contents = true
custom_minimum_size = Vector2(30, 25)
layout_mode = 2
theme = ExtResource("2_uwe2s")
text = "---"
horizontal_alignment = 1
clip_text = true
text_overrun_behavior = 1

[node name="VSeparator3" type="VSeparator" parent="Control/VBoxContainer/Hbox-p1"]
layout_mode = 2

[node name="Delta" type="Label" parent="Control/VBoxContainer/Hbox-p1"]
clip_contents = true
custom_minimum_size = Vector2(60.015, 25)
layout_mode = 2
theme = ExtResource("2_uwe2s")
text = "---"
clip_text = true
text_overrun_behavior = 1

[node name="ProgressBar-p1" type="ProgressBar" parent="Control/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_rdguh")
value = 42.08
show_percentage = false

[node name="HSeparator" type="HSeparator" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Hbox-p2" type="HBoxContainer" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_direction = 2
layout_mode = 2
alignment = 2

[node name="Name" type="Label" parent="Control/VBoxContainer/Hbox-p2"]
clip_contents = true
custom_minimum_size = Vector2(115.86, 25)
layout_mode = 2
theme = ExtResource("2_uwe2s")
text = "---"
horizontal_alignment = 1
text_overrun_behavior = 1

[node name="VSeparator" type="VSeparator" parent="Control/VBoxContainer/Hbox-p2"]
layout_mode = 2

[node name="Sector _ Lap" type="Label" parent="Control/VBoxContainer/Hbox-p2"]
clip_contents = true
custom_minimum_size = Vector2(25.005, 25)
layout_mode = 2
theme = ExtResource("2_uwe2s")
text = "---
"
horizontal_alignment = 1
text_overrun_behavior = 1

[node name="VSeparator2" type="VSeparator" parent="Control/VBoxContainer/Hbox-p2"]
layout_mode = 2

[node name="Gate" type="Label" parent="Control/VBoxContainer/Hbox-p2"]
clip_contents = true
custom_minimum_size = Vector2(30, 25)
layout_mode = 2
theme = ExtResource("2_uwe2s")
text = "---"
horizontal_alignment = 1
clip_text = true
text_overrun_behavior = 1

[node name="VSeparator3" type="VSeparator" parent="Control/VBoxContainer/Hbox-p2"]
layout_mode = 2

[node name="Delta" type="Label" parent="Control/VBoxContainer/Hbox-p2"]
clip_contents = true
custom_minimum_size = Vector2(60.015, 25)
layout_mode = 2
theme = ExtResource("2_uwe2s")
text = "---"
clip_text = true
text_overrun_behavior = 1

[node name="ProgressBar-p2" type="ProgressBar" parent="Control/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_rdguh")
value = 42.08
show_percentage = false

[node name="HSeparator2" type="HSeparator" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Hbox-p3" type="HBoxContainer" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_direction = 2
layout_mode = 2
alignment = 2

[node name="Name" type="Label" parent="Control/VBoxContainer/Hbox-p3"]
clip_contents = true
custom_minimum_size = Vector2(115.86, 25)
layout_mode = 2
theme = ExtResource("2_uwe2s")
text = "---"
horizontal_alignment = 1
text_overrun_behavior = 1

[node name="VSeparator" type="VSeparator" parent="Control/VBoxContainer/Hbox-p3"]
layout_mode = 2

[node name="Sector _ Lap" type="Label" parent="Control/VBoxContainer/Hbox-p3"]
clip_contents = true
custom_minimum_size = Vector2(25.005, 25)
layout_mode = 2
theme = ExtResource("2_uwe2s")
text = "---
"
horizontal_alignment = 1
text_overrun_behavior = 1

[node name="VSeparator2" type="VSeparator" parent="Control/VBoxContainer/Hbox-p3"]
layout_mode = 2

[node name="Gate" type="Label" parent="Control/VBoxContainer/Hbox-p3"]
clip_contents = true
custom_minimum_size = Vector2(30, 25)
layout_mode = 2
theme = ExtResource("2_uwe2s")
text = "---"
horizontal_alignment = 1
clip_text = true
text_overrun_behavior = 1

[node name="VSeparator3" type="VSeparator" parent="Control/VBoxContainer/Hbox-p3"]
layout_mode = 2

[node name="Delta" type="Label" parent="Control/VBoxContainer/Hbox-p3"]
clip_contents = true
custom_minimum_size = Vector2(60.015, 25)
layout_mode = 2
theme = ExtResource("2_uwe2s")
text = "---"
clip_text = true
text_overrun_behavior = 1

[node name="ProgressBar-p3" type="ProgressBar" parent="Control/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_rdguh")
value = 42.08
show_percentage = false

[node name="HSeparator3" type="HSeparator" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Hbox-p4" type="HBoxContainer" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_direction = 2
layout_mode = 2
alignment = 2

[node name="Name" type="Label" parent="Control/VBoxContainer/Hbox-p4"]
clip_contents = true
custom_minimum_size = Vector2(115.86, 25)
layout_mode = 2
theme = ExtResource("2_uwe2s")
text = "---"
horizontal_alignment = 1
text_overrun_behavior = 1

[node name="VSeparator" type="VSeparator" parent="Control/VBoxContainer/Hbox-p4"]
layout_mode = 2

[node name="Sector _ Lap" type="Label" parent="Control/VBoxContainer/Hbox-p4"]
clip_contents = true
custom_minimum_size = Vector2(25.005, 25)
layout_mode = 2
theme = ExtResource("2_uwe2s")
text = "---
"
horizontal_alignment = 1
text_overrun_behavior = 1

[node name="VSeparator2" type="VSeparator" parent="Control/VBoxContainer/Hbox-p4"]
layout_mode = 2

[node name="Gate" type="Label" parent="Control/VBoxContainer/Hbox-p4"]
clip_contents = true
custom_minimum_size = Vector2(30, 25)
layout_mode = 2
theme = ExtResource("2_uwe2s")
text = "---"
horizontal_alignment = 1
clip_text = true
text_overrun_behavior = 1

[node name="VSeparator3" type="VSeparator" parent="Control/VBoxContainer/Hbox-p4"]
layout_mode = 2

[node name="Delta" type="Label" parent="Control/VBoxContainer/Hbox-p4"]
clip_contents = true
custom_minimum_size = Vector2(60.015, 25)
layout_mode = 2
theme = ExtResource("2_uwe2s")
text = "---"
clip_text = true
text_overrun_behavior = 1

[node name="ProgressBar-p4" type="ProgressBar" parent="Control/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_rdguh")
value = 42.08
show_percentage = false

[node name="HSeparator4" type="HSeparator" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Hbox-p5" type="HBoxContainer" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_direction = 2
layout_mode = 2
alignment = 2

[node name="Name" type="Label" parent="Control/VBoxContainer/Hbox-p5"]
clip_contents = true
custom_minimum_size = Vector2(115.86, 25)
layout_mode = 2
theme = ExtResource("2_uwe2s")
text = "---"
horizontal_alignment = 1
text_overrun_behavior = 1

[node name="VSeparator" type="VSeparator" parent="Control/VBoxContainer/Hbox-p5"]
layout_mode = 2

[node name="Sector _ Lap" type="Label" parent="Control/VBoxContainer/Hbox-p5"]
clip_contents = true
custom_minimum_size = Vector2(25.005, 25)
layout_mode = 2
theme = ExtResource("2_uwe2s")
text = "---
"
horizontal_alignment = 1
text_overrun_behavior = 1

[node name="VSeparator2" type="VSeparator" parent="Control/VBoxContainer/Hbox-p5"]
layout_mode = 2

[node name="Gate" type="Label" parent="Control/VBoxContainer/Hbox-p5"]
clip_contents = true
custom_minimum_size = Vector2(30, 25)
layout_mode = 2
theme = ExtResource("2_uwe2s")
text = "---"
horizontal_alignment = 1
clip_text = true
text_overrun_behavior = 1

[node name="VSeparator3" type="VSeparator" parent="Control/VBoxContainer/Hbox-p5"]
layout_mode = 2

[node name="Delta" type="Label" parent="Control/VBoxContainer/Hbox-p5"]
clip_contents = true
custom_minimum_size = Vector2(60.015, 25)
layout_mode = 2
theme = ExtResource("2_uwe2s")
text = "---"
clip_text = true
text_overrun_behavior = 1

[node name="ProgressBar-p5" type="ProgressBar" parent="Control/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_rdguh")
value = 42.08
show_percentage = false

[node name="HSeparator5" type="HSeparator" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Hbox-p6" type="HBoxContainer" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_direction = 2
layout_mode = 2
alignment = 2

[node name="Name" type="Label" parent="Control/VBoxContainer/Hbox-p6"]
clip_contents = true
custom_minimum_size = Vector2(115.86, 25)
layout_mode = 2
theme = ExtResource("2_uwe2s")
text = "---"
horizontal_alignment = 1
text_overrun_behavior = 1

[node name="VSeparator" type="VSeparator" parent="Control/VBoxContainer/Hbox-p6"]
layout_mode = 2

[node name="Sector _ Lap" type="Label" parent="Control/VBoxContainer/Hbox-p6"]
clip_contents = true
custom_minimum_size = Vector2(25.005, 25)
layout_mode = 2
theme = ExtResource("2_uwe2s")
text = "---
"
horizontal_alignment = 1
text_overrun_behavior = 1

[node name="VSeparator2" type="VSeparator" parent="Control/VBoxContainer/Hbox-p6"]
layout_mode = 2

[node name="Gate" type="Label" parent="Control/VBoxContainer/Hbox-p6"]
clip_contents = true
custom_minimum_size = Vector2(30, 25)
layout_mode = 2
theme = ExtResource("2_uwe2s")
text = "---"
horizontal_alignment = 1
clip_text = true
text_overrun_behavior = 1

[node name="VSeparator3" type="VSeparator" parent="Control/VBoxContainer/Hbox-p6"]
layout_mode = 2

[node name="Delta" type="Label" parent="Control/VBoxContainer/Hbox-p6"]
clip_contents = true
custom_minimum_size = Vector2(60.015, 25)
layout_mode = 2
theme = ExtResource("2_uwe2s")
text = "---"
clip_text = true
text_overrun_behavior = 1

[node name="ProgressBar-p6" type="ProgressBar" parent="Control/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_rdguh")
value = 42.08
show_percentage = false

[node name="IP_Input" type="LineEdit" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 52.0
offset_top = -118.0
offset_right = 155.0
offset_bottom = -87.0
theme = SubResource("Theme_0k7v3")
placeholder_text = "Local IP"

[node name="Button" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 54.0
offset_top = -74.0
offset_right = 130.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_bytfd")
text = "Connect"

[node name="Gate Count" type="LineEdit" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 178.0
offset_top = -118.0
offset_right = 271.0
offset_bottom = -87.0
theme = SubResource("Theme_h14tp")
placeholder_text = "Gate Count"

[node name="CheckButton" type="CheckButton" parent="Control"]
layout_mode = 0
offset_left = 282.0
offset_top = 530.0
offset_right = 375.0
offset_bottom = 561.0
text = "green"

[node name="HeartbeatTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="Button" type="Button" parent="."]
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 172.0
offset_top = -72.0
offset_right = 271.0
offset_bottom = -32.0
theme = SubResource("Theme_svhul")
text = "Disconnect"

[connection signal="pressed" from="Control/Button" to="." method="_on_Button_pressed"]
[connection signal="toggled" from="Control/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="timeout" from="HeartbeatTimer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_disconnect_pressed"]
